2004-11-03  Pontus Freyhult  <pont@soua.net>

	* commands1.el (kom-view-commented-text): Cleanup (progn removal),
	inhibit immediate display of footnotes.

2004-10-31  Pontus Freyhult  <pont@soua.net>

	* mship-edit.el (lp--selected-or-current-arg): New function.
	(lp--toggle-flag): New function.
	(lp--postpone): New function.
	(lp--set-unread): New function.
	(lp--toggle-message-flag, lp--toggle-invitiation,
	 lp--toggle-secret, lp--toggle-passive): Use
	lp--selected-or-current-arg and lp--toggle-flag.

	* english-strings.el, swedish-strings.el (local):
	Added lp--only-last and lp-skipping-missing-meeting. 
	Changed lp-footer-help.
	(global): Added lp--set-unread.
	(lyskom-prioritize-mode-map): Added keyboard mappings
	for lp--postpone and lp--set-unread.
	
2004-10-29  Pontus Freyhult  <pont@soua.net>

	* mship-edit.el (lp--entry-set-background): Use 
	lyskom-safe-color-name.
	(lp--entry-set-foreground): Dito.

	* utilities.el (lyskom-safe-color-name): New function.

	* compatibility.el (color-name): New alias.
	(color-specifier-p): New alias.
	(face-background): Reverted previous change, alias again.
	(face-foreground): Reverted previous change, alias again.
	
2004-10-29  Pontus Freyhult  <pont@pontus.its.uu.se>

	* lyskom-rest.el (lyskom-format-image): Disabled run time 
	test for image functions, use aliases instead.

	* compatibility.el (display-images-p): New alias.
	(put-image): New alias.
	(create-image): New alias.

2004-10-29  Pontus Freyhult  <pont@soua.net>

	* lyskom-rest.el (lyskom-format-image): Bugix: Used let instead
	of let*.

2004-10-28  David Byers  <byers@lysator.liu.se>

	* vars.el.in: Updated some documentation strings.

2004-10-28  Pontus Freyhult  <pont@soua.net>

	* mship-edit.el (lp--entry-set-foreground): Do not try to handle
	missing start-marker or end-marker.
	(lp--entry-set-background): Dito.
	(lp--print-entry): Add end-marker before calling 
	lp--format-insert-entry and correct it afterwards.
